--- a/Levenberg_Marquardt/.vscode/tasks.json
+++ b/Levenberg_Marquardt/.vscode/tasks.json
@@ -10,17 +10,17 @@
                 //"-msse4",//4代u,4
                 //"-mavx2",//4代u,2
                 "-march=native",//启用您的cpu支持的所有选项，开太多负优化？
-                //"-O2",//推荐用2
+                "-O2",//推荐用2
                 "-fopenmp",//开启多线程，需要测试看看是不是负优化了
                 "-g",//生成调试信息。GNU 调试器可利用该信息。
 
 
-                "${file}",
+                "${workspaceFolder}/src/*.cpp",
                 "-o",//指定生成可执行文件的名称
                 "${workspaceFolder}/bin/${fileBasenameNoExtension}.exe",
                 //"-L","D:\\Windows Kits\\10\\Lib\\10.0.18362.0\\um\\x64",
                 //"-L","D:\\mingw64\\x86_64-w64-mingw32\\lib",
-                "-I","D:/QinJunyou/C/Math/Computing_Method/include",
+                "-I","D:/QinJunyou/C/Math/Levenberg_Marquardt/include",
                 "-I","D:/FMT/include",
                 "-I","D:/QinJunyou/C/Eigen3/Eigen",
                 "-L","D:/FMT/lib",
